# prisoners-dilemma

./: .gitignore  LICENSE  pyproject.toml  test.py
ipd-tool/: README.md  pyproject.toml
ipd-tool/src/IPD/: __main__.py  data.py  main.py  play.py  profiles.py  strategies.py
ipd-tool/src/IPD.egg-info/: PKG-INFO  SOURCES.txt
