[project]
name = "IPD"
version = "0.0.1"
authors = [
  { name="jumpingtj" },
]
description = "A tool for the iterated prisoners dilemma"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jumpingtj/prisoners-dilemma"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
